Bug 233024 - Incorrect time range when selecting 'Print as timetable view' in Print dialogue
Summary: Incorrect time range when selecting 'Print as timetable view' in Print dialogue
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: printing (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: LO normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-02 02:18 UTC by Sabine Faure
Modified: 2012-07-30 18:51 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-04-02 02:18:25 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch KOrg
- Create an event for today starting at 7:00 and ending at 9:00
- Create another event for today starting at 10:00 and ending at 12:00
- Go to File menu/Print...
- In the Date & Time Range section set the Start time as 10:00 and the end time at 17:00
- Check the 'Extend time range to include all events' check box if not checked by default
- Select the 'Print as timetable view, all days on a single page' radio button
- Leave the other options as set by default
- Click on Print...
- Select Print to File (PDF)
- Browse and select a location on your hard drive to save the file

When you open the file you can see that only the second event is printed (10:00- 12:00) whereas both of them should be displayed.

Trunk, Svn Rev 1110068
Comment 1 Laurent Montel 2010-04-02 09:39:08 UTC
Hi Sabine,
I can't reproduce this problem.
It works fine here.

Could you retest it please ?
Thanks
Regards
Comment 2 Sabine Faure 2010-04-02 17:57:15 UTC
Hi Laurent,

I retested this just now and I can still reproduce it both with an Ical file and a Kolab calendar.

Trunk, Svn Rev 1110236
Comment 3 Allen Winter 2012-07-27 00:23:32 UTC
Git commit 163667089f212475c7b26fe8ec4b55efab615d9b by Allen Winter.
Committed on 27/07/2012 at 02:21.
Pushed by winterz into branch 'master'.

Fix the "Extend time range to include all events" option
in day timetable print mode.

also fix a bug where the footer was misplaced in this print mode.
FIXED-IN: 4.8.5
MERGE: 4.8,4.9

M  +10   -6    korganizer/printing/calprintdefaultplugins.cpp
M  +33   -8    korganizer/printing/calprintpluginbase.cpp
M  +4    -3    korganizer/printing/calprintpluginbase.h

http://commits.kde.org/kdepim/163667089f212475c7b26fe8ec4b55efab615d9b
Comment 4 Allen Winter 2012-07-27 00:29:51 UTC
Git commit 78027f03b1076f23f9bdcfbeb6c40e7e16c317b5 by Allen Winter.
Committed on 27/07/2012 at 02:21.
Pushed by winterz into branch 'KDE/4.8'.

Fix the "Extend time range to include all events" option
in day timetable print mode.

also fix a bug where the footer was misplaced in this print mode.
FIXED-IN: 4.8.5
MERGE: 4.8,4.9
(cherry picked from commit 163667089f212475c7b26fe8ec4b55efab615d9b)

Conflicts:
	korganizer/printing/calprintdefaultplugins.cpp

M  +10   -7    korganizer/printing/calprintdefaultplugins.cpp
M  +33   -8    korganizer/printing/calprintpluginbase.cpp
M  +4    -3    korganizer/printing/calprintpluginbase.h

http://commits.kde.org/kdepim/78027f03b1076f23f9bdcfbeb6c40e7e16c317b5
Comment 5 Allen Winter 2012-07-27 00:30:12 UTC
Git commit 1c0784f800be2e8076d73421c2b656f28f358b9d by Allen Winter.
Committed on 27/07/2012 at 02:21.
Pushed by winterz into branch 'KDE/4.9'.

Fix the "Extend time range to include all events" option
in day timetable print mode.

also fix a bug where the footer was misplaced in this print mode.
FIXED-IN: 4.8.5
MERGE: 4.8,4.9
(cherry picked from commit 163667089f212475c7b26fe8ec4b55efab615d9b)

M  +10   -6    korganizer/printing/calprintdefaultplugins.cpp
M  +33   -8    korganizer/printing/calprintpluginbase.cpp
M  +4    -3    korganizer/printing/calprintpluginbase.h

http://commits.kde.org/kdepim/1c0784f800be2e8076d73421c2b656f28f358b9d
Comment 6 Albert Astals Cid 2012-07-30 18:51:53 UTC
Note this will *NOT* be in 4.9.0, only in 4.9.1 since it came to late for 4.9.0