Fix the "Extend time range to include all events" option in day timetable print mode.

also fix a bug where the footer was misplaced in this print mode.

BUG: 233024
FIXED-IN: 4.8.5
MERGE: 4.8,4.9
(cherry picked from commit 163667089f212475c7b26fe8ec4b55efab615d9b)